# SuperAgent

./: .gitignore  IMPLEMENTATION_PLAN.md  PHASE_6_VERIFICATION.md  README.md  TASK_REQUIREMENTS.md  package.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: documents.py  health.py  history.py  query.py
backend/app/core/: config.py  errors.py  sse.py
backend/app/models/: __init__.py  citations.py  documents.py  query.py  streaming.py  workflow.py
backend/app/services/: agent_service.py  composio_service.py  dependencies.py  document_service.py  embedding_service.py  memory_service.py  orchestration_service.py  query_understanding_service.py  response_service.py  retrieval_service.py  vector_store.py
backend/app/services/tools/: __init__.py  base.py  composio_tool.py  memory.py  retrieval.py  time_tool.py
backend/app/tests/: test_app.py  test_services.py
backend/superagent_rag_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: api_sse.md  architecture.md  ci.yml  deployment.md  streaming-events.md  troubleshooting.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  types.ts
