[project]
name = "superagent-rag-backend"
version = "0.1.0"
description = "FastAPI backend for the SuperAgent agentic RAG workflow"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.20",
  "python-dotenv>=1.0.1",
  "chromadb>=0.5.0",
  "google-genai>=1.0.0",
  "composio-core>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
